// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component SingleAddress - test SingleAddress - snapshot 1`] = `
<View
  style={
    {
      "flexDirection": "column",
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "alignItems": "center",
      }
    }
  >
    <View>
      <View
        style={
          {
            "backgroundColor": "#c3c3c3",
            "marginHorizontal": 20,
            "marginTop": 20,
            "padding": 10,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <View>
            <mockQRCode />
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-evenly",
            "marginVertical": 0,
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "marginBottom": 5,
              "marginTop": 10,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
                "margin": 10,
                "marginRight": 20,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#18bd18",
                  "borderColor": "#18bd18",
                  "borderRadius": 15,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "paddingHorizontal": 10,
                  "paddingVertical": 5,
                  "width": 155,
                }
              }
            >
              <Text
                numberOfLines={1}
                style={
                  {
                    "color": "#040C17",
                    "fontWeight": "bold",
                    "marginRight": 5,
                    "opacity": 0.9,
                  }
                }
              />
              <
                color="#040C17"
                icon={
                  {
                    "icon": [
                      512,
                      512,
                      [],
                      "f078",
                      "M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z",
                    ],
                    "iconName": "chevron-down",
                    "prefix": "fas",
                  }
                }
                size={15}
              />
            </View>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#040C17",
                  "borderColor": "#888888",
                  "borderRadius": 30,
                  "borderWidth": 1,
                  "marginHorizontal": 10,
                  "paddingHorizontal": 5,
                  "paddingVertical": 5,
                }
              }
            >
              <
                color="#ffffff"
                icon={
                  {
                    "icon": [
                      448,
                      512,
                      [],
                      "f0c5",
                      "M208 0L332.1 0c12.7 0 24.9 5.1 33.9 14.1l67.9 67.9c9 9 14.1 21.2 14.1 33.9L448 336c0 26.5-21.5 48-48 48l-192 0c-26.5 0-48-21.5-48-48l0-288c0-26.5 21.5-48 48-48zM48 128l80 0 0 64-64 0 0 256 192 0 0-32 64 0 0 48c0 26.5-21.5 48-48 48L48 512c-26.5 0-48-21.5-48-48L0 176c0-26.5 21.5-48 48-48z",
                    ],
                    "iconName": "copy",
                    "prefix": "fas",
                  }
                }
                size={20}
                style={
                  {
                    "margin": 5,
                    "opacity": 0.9,
                  }
                }
              />
            </View>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#040C17",
                  "borderColor": "#888888",
                  "borderRadius": 30,
                  "borderWidth": 1,
                  "marginHorizontal": 10,
                  "paddingHorizontal": 5,
                  "paddingVertical": 5,
                }
              }
            >
              <
                color="#ffffff"
                icon={
                  {
                    "icon": [
                      512,
                      512,
                      [
                        "mail-forward",
                      ],
                      "f064",
                      "M307 34.8c-11.5 5.1-19 16.6-19 29.2l0 64-112 0C78.8 128 0 206.8 0 304C0 417.3 81.5 467.9 100.2 478.1c2.5 1.4 5.3 1.9 8.1 1.9c10.9 0 19.7-8.9 19.7-19.7c0-7.5-4.3-14.4-9.8-19.5C108.8 431.9 96 414.4 96 384c0-53 43-96 96-96l96 0 0 64c0 12.6 7.4 24.1 19 29.2s25 3 34.4-5.4l160-144c6.7-6.1 10.6-14.7 10.6-23.8s-3.8-17.7-10.6-23.8l-160-144c-9.4-8.5-22.9-10.6-34.4-5.4z",
                    ],
                    "iconName": "share",
                    "prefix": "fas",
                  }
                }
                size={20}
                style={
                  {
                    "margin": 5,
                    "opacity": 0.9,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "marginBottom": 30,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "flex-start",
                "display": "flex",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "flex-start",
                  "display": "flex",
                  "flexDirection": "column",
                  "marginRight": 10,
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "display": "flex",
                      "flexDirection": "column",
                      "flexWrap": "wrap",
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#c3c3c3",
                        "fontSize": 18,
                        "fontWeight": "600",
                        "opacity": 1,
                      }
                    }
                  >
                    UA-orch...4567890
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Component SingleAddress UFVK - test SingleAddress UFVK - snapshot 1`] = `
<View
  style={
    {
      "flexDirection": "column",
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "alignItems": "center",
      }
    }
  >
    <View>
      <View
        style={
          {
            "backgroundColor": "#c3c3c3",
            "marginHorizontal": 20,
            "marginTop": 20,
            "padding": 10,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <View>
            <mockQRCode />
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-evenly",
            "marginVertical": 0,
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "marginBottom": 5,
              "marginTop": 10,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#040C17",
                  "borderColor": "#888888",
                  "borderRadius": 30,
                  "borderWidth": 1,
                  "marginHorizontal": 10,
                  "paddingHorizontal": 5,
                  "paddingVertical": 5,
                }
              }
            >
              <
                color="#ffffff"
                icon={
                  {
                    "icon": [
                      448,
                      512,
                      [],
                      "f0c5",
                      "M208 0L332.1 0c12.7 0 24.9 5.1 33.9 14.1l67.9 67.9c9 9 14.1 21.2 14.1 33.9L448 336c0 26.5-21.5 48-48 48l-192 0c-26.5 0-48-21.5-48-48l0-288c0-26.5 21.5-48 48-48zM48 128l80 0 0 64-64 0 0 256 192 0 0-32 64 0 0 48c0 26.5-21.5 48-48 48L48 512c-26.5 0-48-21.5-48-48L0 176c0-26.5 21.5-48 48-48z",
                    ],
                    "iconName": "copy",
                    "prefix": "fas",
                  }
                }
                size={20}
                style={
                  {
                    "margin": 5,
                    "opacity": 0.9,
                  }
                }
              />
            </View>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#040C17",
                  "borderColor": "#888888",
                  "borderRadius": 30,
                  "borderWidth": 1,
                  "marginHorizontal": 10,
                  "paddingHorizontal": 5,
                  "paddingVertical": 5,
                }
              }
            >
              <
                color="#ffffff"
                icon={
                  {
                    "icon": [
                      512,
                      512,
                      [
                        "mail-forward",
                      ],
                      "f064",
                      "M307 34.8c-11.5 5.1-19 16.6-19 29.2l0 64-112 0C78.8 128 0 206.8 0 304C0 417.3 81.5 467.9 100.2 478.1c2.5 1.4 5.3 1.9 8.1 1.9c10.9 0 19.7-8.9 19.7-19.7c0-7.5-4.3-14.4-9.8-19.5C108.8 431.9 96 414.4 96 384c0-53 43-96 96-96l96 0 0 64c0 12.6 7.4 24.1 19 29.2s25 3 34.4-5.4l160-144c6.7-6.1 10.6-14.7 10.6-23.8s-3.8-17.7-10.6-23.8l-160-144c-9.4-8.5-22.9-10.6-34.4-5.4z",
                    ],
                    "iconName": "share",
                    "prefix": "fas",
                  }
                }
                size={20}
                style={
                  {
                    "margin": 5,
                    "opacity": 0.9,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "marginBottom": 30,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "flex-start",
                "display": "flex",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "flex-start",
                  "display": "flex",
                  "flexDirection": "column",
                  "marginRight": 10,
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "display": "flex",
                      "flexDirection": "column",
                      "flexWrap": "wrap",
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#c3c3c3",
                        "fontSize": 18,
                        "fontWeight": "600",
                        "opacity": 1,
                      }
                    }
                  >
                    Unknown
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
